<resources>
    <string name="app_name">NUMAD20S-HuiyunWu</string>
    <string name="name">Huiyun Wu</string>
    <string name="email">wu.hui@husky.neu.edu</string>
    <string name="todo">TODO</string>
    <string name="imgcontent">splashscreen</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splash">splash</string>
    <string name="title_activity_link__collector">Link_Collector</string>
    <string name="link_name">Name</string>
    <string name="link_url">URL</string>
    <string name="autofill_address">https://</string>
    <string name="paste">PASTE</string>
    <string name="add_link">Add</string>
    <string name="link_collector">Link Collector</string>
    <string name="example_name">Google</string>
    <string name="example_url">https://google.com</string>
    <string name="url_warning">URL Required!</string>
    <string name="empty_warning">Your List is Empty!</string>
    <string name="find_primes">Find Primes</string>
    <string name="number2">2</string>
    <string name="stop_hint">Tap to Stop</string>
    <string name="powerOrBattery">battery</string>
    <string name="watch_time">WATCH TIME</string>
    <string name="stopTime">STOP WATCH TIME</string>
    <string name="math_magic">MATH MAGIC</string>
    <string name="location">LOCATION</string>
    <string name="show_location">SHOW LOCATION</string>
    <string name="hide_location">HIDE LOCATION</string>
    <string name="number0">0</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="wait_hint">Please Wait 10 Sec For the Sensor to Load</string>
</resources>
