<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_popup"
    android:gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/Link_name"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/example_name"
        android:ems="10"
        android:hint="@string/link_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Link_address"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/example_url"
            android:ems="10"
            android:hint="@string/link_url"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:labelFor="@id/paste" />

        <ImageButton
            android:id="@+id/paste"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/paste"
            android:tint="#237FF0"
            app:srcCompat="?attr/actionModePasteDrawable" />

    </LinearLayout>

    <TextView
        android:id="@+id/url_warning"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/url_warning"
        android:textColor="@android:color/holo_red_dark"
        android:textColorLink="#FFFFFF" />

    <Button
        android:id="@+id/Add_Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_button"
        android:enabled="false"
        android:labelFor="@id/Link_name"
        android:text="@string/add_link"
        android:textColor="@drawable/button_text_color"/>

</LinearLayout>