<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/stopHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:text="@string/stop_hint"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp"
        android:gravity="center"
        android:text="@string/number2"
        android:textColor="@android:color/holo_red_light"
        android:textSize="100sp" />

    <View
        android:id="@+id/coverview_fp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/powerOrBattery"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="309dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/battery"
        android:backgroundTint="#529BF7"
        android:gravity="center"
        android:text="@string/powerOrBattery"
        android:textSize="12sp" />

    <Switch
        android:id="@+id/watch_time"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:showText="false"
        android:switchMinWidth="30dp"
        android:switchPadding="5sp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Display2"
        android:text="@string/watch_time"
        android:textOff="@string/stopTime"
        android:textOn="@string/watch_time"
        android:textSize="18sp"
        android:thumbTint="#408FE4" />

    <Button
        android:id="@+id/find_primes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="295dp"
        android:layout_marginBottom="286dp"
        android:background="@drawable/round_button"
        android:paddingHorizontal="5sp"
        android:text="@string/find_primes"
        android:textColor="@drawable/button_text_color"
        android:textSize="18sp" />

</RelativeLayout>
